--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -25,5 +25,13 @@
   <description>
      Welcome to Tomcat
   </description>
+   <servlet>
+        <servlet-name>UploadImage</servlet-name>
+        <servlet-class>UploadImage</servlet-class>
+    </servlet>
 
+    <servlet-mapping>
+        <servlet-name>UploadImage</servlet-name>
+        <url-pattern>/UploadImage</url-pattern>
+    </servlet-mapping>
 </web-app>
